contain image within its container to avoid overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,26 @@ a.nav-link {
   font-family: 'Poppins';
 }
 
+p.post-author {
+  padding-top: 11px;
+}
+
+a.post-link {
+  font-size: 2rem;
+}
+
+.post-image {
+  max-width: 100%;
+  height: auto;
+  overflow: hidden;
+}
+.post-image img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+
 /* Style for logout button */
 #logout {
   padding: 10px 25px;
